--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Berättelsen om den svenska köttindustrin. Hur går det till och varför?">
+  <meta name="description" content="Kött är för många en självklarhet, för andra är det en jobbig verklighet. Det här är berättelsen om den svenska köttindustrin.">
   <meta name="keywords" content="kött,köttindustri">
   <meta name="robots" content="all">
 
   <meta property="og:site_name" content="Berättelsen om köttet">
   <meta property="og:title" content="Berättelsen om köttet">
-  <meta property="og:description" content="Berättelsen om den svenska köttindustrin. Hur går det till och varför?">
+  <meta property="og:description" content="Kött är för många en självklarhet, för andra är det en jobbig verklighet. Det här är berättelsen om den svenska köttindustrin.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://kottet.se/og.png">
   <meta property="og:url" content="https://kottet.se">
