Removing https from og, adding http

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
   <meta property="og:title" content="Berättelsen om köttet">
   <meta property="og:description" content="Kött är för många en självklarhet, för andra är det en jobbig verklighet. Det här är berättelsen om den svenska köttindustrin.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://kottet.se/og.png">
-  <meta property="og:url" content="https://kottet.se">
+  <meta property="og:image" content="http://kottet.se/og.png">
+  <meta property="og:url" content="http://kottet.se">
 
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
