--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
               <div class="content" style="height: 96%;"><img src="assets/img/icon_chicken.svg"></div>
             </div>
             <div class="numbers">
-              <span class="counter notranslate">83,265,440</span>
+              <span class="number">83,265,440</span>
               <span class="animal">Kycklingar</span>
             </div>
           </div>
@@ -245,7 +245,7 @@
               <div class="content" style="height: 3%;"><img src="assets/img/icon_pig.svg"></div>
             </div>
             <div class="numbers">
-              <span class="counter notranslate">2,550,710</span>
+              <span class="number">2,550,710</span>
               <span class="animal">Grisar</span>
             </div>
           </div>
@@ -254,7 +254,7 @@
               <div class="content" style="height: 0.5%;"><img src="assets/img/icon_cow.svg"></div>
             </div>
             <div class="numbers">
-              <span class="counter notranslate">417,390</span>
+              <span class="number">417,390</span>
               <span class="animal">Nötdjur</span>
             </div>
           </div>
@@ -263,7 +263,7 @@
               <div class="content" style="height: 0.3%;"><img src="assets/img/icon_lamb.svg"></div>
             </div>
             <div class="numbers">
-              <span class="counter notranslate">252,880</span>
+              <span class="number">252,880</span>
               <span class="animal">Får & lamm</span>
             </div>
           </div>
@@ -293,7 +293,7 @@
                   <div class="content" style="height: 100%;"><img src="assets/img/usa.svg"></div>
                 </div>
                 <div class="numbers">
-                  <span class="number"><span class="counter">9.1</span> miljarder</span>
+                  <span class="number">9.1 miljarder</span>
                   <span class="animal">USA</span>
                 </div>
               </div>
@@ -302,7 +302,7 @@
                   <div class="content" style="height: 1%;"><img src="assets/img/sweden.svg"></div>
                 </div>
                 <div class="numbers">
-                  <span class="number"><span class="counter">90</span> miljoner</span>
+                  <span class="number">90 miljoner</span>
                   <span class="animal">Sverige</span>
                 </div>
               </div>
@@ -686,7 +686,7 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text-center">
             <div class="text">
-              <h2><span class="counter votes">0</span> Röster</h2>
+              <h2><span class="votes">0</span> Röster</h2>
               <h3>Tänker du välja bort köttet?</h3>
 
               <div class="row voting">
