--- a/src/index.html
+++ b/src/index.html
@@ -237,7 +237,7 @@
             </div>
             <div class="numbers">
               <span class="number notranslate">83 265 440</span>
-              <span class="animal">Kycklingar</span>
+              <span class="desc">Kycklingar</span>
             </div>
           </div>
           <div class="col-xs-3 pig">
@@ -246,7 +246,7 @@
             </div>
             <div class="numbers">
               <span class="number notranslate">2 550 710</span>
-              <span class="animal">Grisar</span>
+              <span class="desc">Grisar</span>
             </div>
           </div>
           <div class="col-xs-3 cow">
@@ -255,7 +255,7 @@
             </div>
             <div class="numbers">
               <span class="number notranslate">417 390</span>
-              <span class="animal">Nötdjur</span>
+              <span class="desc">Nötdjur</span>
             </div>
           </div>
           <div class="col-xs-3 lamb">
@@ -264,7 +264,7 @@
             </div>
             <div class="numbers">
               <span class="number notranslate">252 880</span>
-              <span class="animal">Får & lamm</span>
+              <span class="desc">Får & lamm</span>
             </div>
           </div>
         </div>
@@ -278,8 +278,63 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <div class="text text-center">
-            <h2>Och Sverige är inte ensam om att slakta djur</h2>
-            <h3>USA slaktade <strong><span class="counter">9.1</span> miljarder</strong> djur 2013</h3>
+            <h2>Men vi har glömt några, fiskarna</h2>
+            <h3>Vi fångar <strong>19 miljarder</strong> fiskar varje år</h3>
+            <p class="source dark_underline"><a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/fiskar-vattenlevande-djur" target="_blank" style="font-weight: 300;">Fiskeriverket. Personligt meddelande 2010-12-07.</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="stats">
+        <div class="row">
+          <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+            <div class="row">
+              <div class="col-xs-4 fish">
+                <div class="stat">
+                  <div class="content" style="height: 100%;"><img src="assets/img/icon_fish.svg"></div>
+                </div>
+                <div class="numbers">
+                  <span class="number notranslate">19 miljarder</span>
+                  <span class="desc">Vattenlevande djur</span>
+                </div>
+              </div>
+              <div class="col-xs-4 animalfood">
+                <div class="stat">
+                  <div class="content" style="height: 74%;"><img src="assets/img/icon_animalfood.svg"></div>
+                </div>
+                <div class="numbers">
+                  <span class="number notranslate">14 miljarder</span>
+                  <span class="desc">Används som djurfoder</span>
+                </div>
+              </div>
+              <div class="col-xs-4 landanimals">
+                <div class="stat">
+                  <div class="content" style="height: 0.47%;"> 
+                    <img src="assets/img/icon_chicken.svg" style="width: 5px; margin-top: -50px;">  
+                    <img src="assets/img/icon_pig.svg" style="width: 10px; margin-top: -50px;"> 
+                    <img src="assets/img/icon_cow.svg" style="width: 10px; margin-top: -50px;"> 
+                    <img src="assets/img/icon_lamb.svg" style="width: 8px; margin-top: -50px;">
+                  </div>
+                </div>
+                <div class="numbers">
+                  <span class="number notranslate">90 miljoner</span>
+                  <span class="desc">Landdjur</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="del8extra">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <div class="text text-center">
+            <h2>Sverige är inte ensam om att slakta djur</h2>
+            <h3>USA slaktade <strong>9.1 miljarder</strong> djur 2013</h3>
             <p class="source dark_underline"><a href="http://www.humanesociety.org/news/resources/research/stats_slaughter_totals.html" target="_blank" style="font-weight: 300;">USDA, National Agricultural Statistics Service</a></p>
           </div>
         </div>
@@ -294,7 +349,7 @@
                 </div>
                 <div class="numbers">
                   <span class="number notranslate">9,1 miljarder</span>
-                  <span class="animal">USA</span>
+                  <span class="desc">USA</span>
                 </div>
               </div>
               <div class="col-xs-6 sweden">
@@ -303,7 +358,7 @@
                 </div>
                 <div class="numbers">
                   <span class="number notranslate">90 miljoner</span>
-                  <span class="animal">Sverige</span>
+                  <span class="desc">Sverige</span>
                 </div>
               </div>
             </div>
@@ -402,6 +457,26 @@
   <div class="del13">
     <div class="container">
       <div class="row">
+        <div class="col-sm-5 col-lg-4">
+          <div class="text">
+            <img src="assets/img/profile_fish.svg" alt="Fisk illustration" class="primary_img showMobile">
+            <h2>Fisken</h2>
+            <p>Omkring hälften av allt fiskkött kommer idag från odlingar, där de föds upp i dammar eller burar. Det beror bland annat på att haven blir allt mer utfiskade.</p>
+            <p>De flesta fiskar som odlas idag får foder gjort på andra viltfångade fiskar.</p>
+            <p>Och precis som de andra djuren så kan fisken känna smärta. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/fiskar-vattenlevande-djur" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+          </div>
+        </div>
+        <div class="col-xs-7 col-lg-8 text-center">
+          <img src="assets/img/profile_fish.svg" alt="Fisk illustration" class="primary_img hideMobile">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="del14">
+    <div class="container">
+      <div class="row">
         <div class="col-sm-12">
           <div class="text text-center">
             <img src="assets/img/rabbit.svg" alt="Kanin illustration" class="primary_img">
@@ -419,7 +494,7 @@
 
 
 
-  <div class="del14">
+  <div class="del15">
     <div class="container">
       <div class="row">
         <div class="col-sm-7">
@@ -459,7 +534,7 @@
 
 
 
-  <div class="del15">
+  <div class="del16">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -496,7 +571,7 @@
   </div>
 
 
-  <div class="del16">
+  <div class="del17">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -516,7 +591,7 @@
   </div>
 
 
-  <div class="del17">
+  <div class="del18">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -538,7 +613,7 @@
   </div>
 
 
-  <div class="del18">
+  <div class="del19">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -552,7 +627,7 @@
   </div>
 
 
-  <div class="del19">
+  <div class="del20">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -574,7 +649,7 @@
   </div>
 
 
-  <div class="del20">
+  <div class="del21">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -594,7 +669,7 @@
   </div>
 
 
-  <div class="del21">
+  <div class="del22">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -614,7 +689,7 @@
   </div>
 
 
-  <div class="del22">
+  <div class="del23">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -632,7 +707,7 @@
     </div>
   </div>
 
-  <div class="del23">
+  <div class="del24">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -663,7 +738,7 @@
   </div>
 
 
-  <div class="del24">
+  <div class="del25">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -680,7 +755,7 @@
   </div>
 
 
-  <div class="del25">
+  <div class="del26">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
@@ -734,7 +809,7 @@
   </div>
 
 
-  <div class="del26">
+  <div class="del27">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
