--- a/src/index.html
+++ b/src/index.html
@@ -461,8 +461,9 @@
           <div class="text">
             <img src="assets/img/profile_fish.svg" alt="Fisk illustration" class="primary_img showMobile">
             <h2>Fisken</h2>
-            <p>Omkring hälften av allt fiskkött kommer idag från odlingar, där de föds upp i dammar eller burar i havet. Det beror bland annat på att haven blir allt mer utfiskade.</p>
-            <p>De flesta fiskar som odlas idag får foder gjort på andra viltfångade fiskar.</p>
+            <p>Omkring hälften av allt fiskkött kommer idag från odlingar, där de föds upp i dammar eller burar i havet.</p>
+
+            <p>Det beror bland annat på att haven blir allt mer utfiskade. Samtidigt får de flesta fiskar som odlas idag foder gjort på andra viltfångade fiskar.</p>
             <p>Och precis som de andra djuren så kan fisken känna smärta. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/fiskar-vattenlevande-djur" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
